--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=false
 spring.main.allow-circular-references=true
+spring.data.rest.base-path=/api
